test/testdata/variables/self_referential_definition_error_local.lox
var a = "global a";
_ = a;
{
  // error: a read in its own initialiser
  // lint error: a read in its own initialiser
  var a = "shadowed " + a;
  print a;
}
